# BTC-LAST-TRADED-PRICE

./: Cargo.toml  Dockerfile  README.MD  docker-compose.yml  env.example
src/: main.rs
src/application/: mod.rs
src/application/services/: mod.rs
src/application/services/btc_service/: mod.rs
src/application/services/btc_service/dto/: mod.rs
src/domain/: mod.rs
src/domain/entity/: mod.rs  pair_ltp.rs
src/domain/models/: mod.rs
src/domain/value_objects/: mod.rs  pair_amount.rs  pair_name.rs
src/infrastructure/: mod.rs
src/infrastructure/api/: mod.rs
src/infrastructure/api/app_state/: mod.rs
src/infrastructure/api/v1/: errors.rs  handlers.rs  mod.rs
src/infrastructure/config/: mod.rs
src/infrastructure/kraken_service/: mod.rs
